--- a/ProAgil.API/appsettings.Development.json
+++ b/ProAgil.API/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
-  "ConnectionString":{
-    "DefaultConnection":"DataSource=ProAgil.db"
-  },
+  "ConnectionStrings":{
+    "DefaultConnection":"DataSource=ProAgil.db"},
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
