--- a/ProAgilApp/angular.json
+++ b/ProAgilApp/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "ProAgilApp": {
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ProAgilApp"
+    }
+  },
+  "defaultProject": "ProAgilApp",
+  "cli": {
+    "analytics": "db7393be-cb2d-488e-9e81-75174b1f0267"
+  }
 }
